# phantomat

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/phantomat-core/: Cargo.toml  README.md
crates/phantomat-core/benches/: scale_bench.rs
crates/phantomat-core/src/: color.rs  lib.rs  scale.rs
crates/phantomat-core/src/reference/: histogram.rs  mod.rs
crates/phantomat-core/src/scale/: error.rs  linear.rs  log.rs
crates/phantomat-core/tests/: colors.rs  scales.rs
crates/phantomat-core/tests/snapshots/: colors__magma_11_stops.snap  colors__plasma_11_stops.snap  colors__viridis_11_stops.snap
crates/phantomat-layers/: Cargo.toml
crates/phantomat-layers/benches/: scatter_bench.rs
crates/phantomat-layers/src/: arrow_schema.rs  heatmap.rs  layer.rs  lib.rs  scatter.rs
crates/phantomat-layers/src/shaders/: heatmap_accumulate.wgsl  heatmap_flatten.wgsl  heatmap_present.wgsl  scatter.wgsl
crates/phantomat-layers/tests/: from_arrow.rs  heatmap_golden.rs  scatter_golden.rs  scatter_property.rs
crates/phantomat-python/: Cargo.toml
crates/phantomat-python/src/: lib.rs
crates/phantomat-renderer/: Cargo.toml  README.md
crates/phantomat-renderer/src/: error.rs  headless.rs  lib.rs  scene.rs
crates/phantomat-renderer/src/compute/: histogram.rs  histogram_2d.wgsl  mod.rs
crates/phantomat-renderer/src/shaders/: triangle.wgsl
crates/phantomat-renderer/tests/: differential_cpu_vs_gpu.rs  golden.rs
crates/phantomat-renderer/tests/golden/: UPDATE_LOG.md
crates/phantomat-wasm/: Cargo.toml
crates/phantomat-wasm/src/: lib.rs  wasm_lib.rs
crates/phantomat-wasm/tests/: wasm_tests.rs
docs/: TODOs.md
examples/python/: quickstart.ipynb
examples/web/: README.md  index.html  main.js  package.json  vite.config.ts
examples/web/src/: main.ts
fixtures/: .gitattributes  scatter_1k.ipc  scatter_1k.parquet
python/: pyproject.toml
python/phantomat/: __init__.py  _native.pyi  reference.py  widget.py
python/tests/: test_anywidget_transport.py  test_arrow.py  test_fixture_arrow_vec_parity.py  test_numpy_roundtrip.py  test_property.py  test_render_smoke.py
scripts/: build_widget.sh  generate_fixtures.py  sync-versions.mjs  verify-release.sh
tests/differential/: python_arrow_parity.py  test_python_ts_parity.py
tests/differential/python_ts_parity/: build_scene.mjs  build_scene.py
tests/differential/python_ts_parity/fixtures/: scenario_bar_categorical.json  scenario_combined_3layers.json  scenario_heatmap_clusters.json  scenario_line_timeseries.json  scenario_scatter_basic.json
xtask/: Cargo.toml
xtask/src/: main.rs
