[package]
name = "phantomat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Phantomat (high-performance data visualization; Rust + WASM)."
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
