[package]
name = "phantomat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Phantomat (high-performance data visualization; Rust + WASM)."
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
palette = "0.7"
thiserror = "1"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
criterion = "0.5"

[[bench]]
name = "scale_bench"
harness = false
