[package]
name = "phantomat-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless wgpu renderer for Phantomat (PNG export + golden tests)."
readme = "README.md"

[features]
default = []
# Windows CI uses DX12 explicitly (see `.github/workflows/ci.yml`).
dx12 = ["wgpu/dx12"]

[dependencies]
# Stay on wgpu 23.x until we intentionally migrate (breaking GPU API changes land frequently).
bytemuck.workspace = true
thiserror = "1"
wgpu.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 0.25.10+ raises MSRV beyond workspace `rust-version` (1.88).
image = { version = "=0.25.5", default-features = false, features = ["png"] }
pollster = "0.4"

[dev-dependencies]
bytemuck.workspace = true
dssim = "3"
rgb = "0.8"
