[package]
name = "phantomat-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for Phantomat (wgpu + scatter layers)."

# `wasm-opt` in wasm-pack can lag Rust’s target features; rely on `rustc` LTO + `strip` (workspace profile).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
phantomat-layers = { path = "../phantomat-layers" }
phantomat-renderer = { path = "../phantomat-renderer" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
wgpu = { workspace = true, features = ["webgpu", "webgl"] }

[dev-dependencies]
phantomat-core = { path = "../phantomat-core" }
wasm-bindgen-test = "0.3"
